--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,118 +1,118 @@
 .navigation {
-    font-family: 'Inter', Arial, sans-serif;
-    align-items: center;
-    justify-content: flex-end;
-    background-color: rgba(0, 0, 0, .5);
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: none;
-    z-index: 2;
+  font-family: "Inter", Arial, sans-serif;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  z-index: 2;
 }
 
 .navigation_is-opened {
-    top: -30px;
-    display: block;
+  top: -30px;
+  display: block;
 }
 
 .navigation__content {
-    width: 100%;
-    height: 100%;
-    margin: 0 0 0 auto;
-    max-width: 520px;
-    background-color: #202020;
-    color: #FFFFFF;
-    position: relative;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  margin: 0 0 0 auto;
+  max-width: 520px;
+  background-color: #202020;
+  color: #ffffff;
+  position: relative;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .navigation__close {
-    padding: 0;
-    position: absolute;
-    right: 22px;
-    top: 52px;
-    max-width: 22px;
-    min-height: 22px;
-    background-position: center;
-    background-color: #202020;
-    cursor: pointer;
-    border: none;
+  padding: 0;
+  position: absolute;
+  right: 22px;
+  top: 52px;
+  max-width: 22px;
+  min-height: 22px;
+  background-position: center;
+  background-color: #202020;
+  cursor: pointer;
+  border: none;
 }
 
 .navigation__close:hover {
-    transition: 1s ease-in;
-    opacity: .6;
+  transition: 1s ease-in;
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 320px) {
-    .navigation__close {
-        right: 14px;
-        top: 44px;
-    }
+  .navigation__close {
+    right: 14px;
+    top: 44px;
+  }
 }
 
 .navigation__close-img {
-    max-width: 22px;
+  max-width: 22px;
 }
 
 .navigation__links {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
 }
 
 .navigation__link-container {
-    margin: 24px auto 0 auto;
-    text-align: center;
-    cursor: pointer;
-    padding-bottom: 4px;
-    max-width: max-content;
-    text-decoration: none;
-    border-bottom: none;
+  margin: 24px auto 0 auto;
+  text-align: center;
+  cursor: pointer;
+  padding-bottom: 4px;
+  max-width: max-content;
+  text-decoration: none;
+  border-bottom: none;
 }
 
 .navigation__link-container:first-of-type {
-    padding-top: 159px;
+  padding-top: 159px;
 }
 
 .navigation__link-container:hover {
-    border-bottom: #FFFFFF 2px solid;
+  border-bottom: #ffffff 2px solid;
 }
 
 @media screen and (max-width: 540px) {
-    .navigation__link-container:first-of-type {
-        padding-top: 144px;
-    }
+  .navigation__link-container:first-of-type {
+    padding-top: 144px;
+  }
 }
 
 .navigation__link {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    color: #FFFFFF;
-    text-decoration: none;
-    border-bottom: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #ffffff;
+  text-decoration: none;
+  border-bottom: none;
 }
 
 .navigation__button-container {
-    margin: 0 auto 92px auto;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    align-items: center;
+  margin: 0 auto 92px auto;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media screen and (max-width: 540px) {
-    .navigation__button-container {
-        margin-bottom: 48px;
-    }
+  .navigation__button-container {
+    margin-bottom: 48px;
+  }
 }
