--- a/src/components/HeaderNav/HeaderNav.css
+++ b/src/components/HeaderNav/HeaderNav.css
@@ -1,11 +1,10 @@
 .header-nav {
+}
+
+.header-nav__container {
   margin-left: 44px;
   margin-right: 5.47vw;
   min-width: 221px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: flex-start;
 }
 
 @media screen and (max-width: 768px) {
