--- a/src/components/NavProfileBtn/NavProfileBtn.css
+++ b/src/components/NavProfileBtn/NavProfileBtn.css
@@ -1,10 +1,15 @@
 .nav-profile-btn {
+  display: block;
   padding: 0;
   margin: 0;
   border: none;
   min-height: 32px;
   min-width: 100px;
   border-radius: 15px;
+}
+
+.nav-profile-btn_is-close {
+  display: none;
 }
 
 .nav-profile-btn-link {
