--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -67,7 +67,7 @@
   background-repeat: no-repeat;
   padding: 0;
   border: none;
-  background-color: #222222;
+  background-color: #fff;
 }
 
 .movies-card__image {
@@ -76,7 +76,7 @@
   min-width: 100%;
   max-height: 190px;
   object-fit: cover;
-  background-color: #222222;
+  background-color: #F9F9F9;
 }
 
 @media screen and (max-width: 720px) {
