--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,5 +1,5 @@
 .about-me {
-  margin: 0 auto 125px auto;
+
   max-width: 1280px;
   min-height: 1079px;
 }
@@ -7,6 +7,18 @@
 @media screen and (max-width: 1024px) {
   .about-me {
     min-height: 994px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .about-me {
+    margin: 0 auto 145px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .about-me {
+    margin: 0 auto 90px;
   }
 }
 
@@ -34,7 +46,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 400px) {
   .about-me__title {
     margin: 0 14px 0 14px;
     padding-top: 70px;
@@ -58,6 +70,16 @@
 @media screen and (max-width: 600px) {
   .about-me__container {
     margin: 60px 14px 0 14px;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+
+
+@media screen and (max-width: 40px) {
+  .about-me__container {
+    margin: 60px 0px 0;
     flex-direction: column-reverse;
     justify-content: flex-start;
     align-items: center;
@@ -279,6 +301,14 @@
   }
 }
 
+@media screen and (max-width: 400px) {
+  .about-me__link-name {
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.04em;
+  }
+}
+
 .about-me__link-arrow {
   max-width: 29px;
   min-height: 60px;
@@ -292,8 +322,9 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 400px) {
   .about-me__link-arrow {
-    max-width: 18px;
+    max-width: 12px;
+    margin-right: 15px;
   }
 }
