--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,11 +8,12 @@
 @media screen and (max-width: 768px) {
   .footer {
     max-width: 768px;
+    margin: 79px auto 0 auto;
   }
 }
 
 .footer__title {
-  margin: 79px 5.47vw 0 5.47vw;
+  margin: 79px 25px 0px;
   padding: 0 0 20px 0;
   align-self: center;
   text-align: center;
@@ -35,7 +36,7 @@
 
 @media screen and (max-width: 768px) {
   .footer__container {
-    margin: 0 30px 0 30px;
+    margin: 0px 25px 0px 35px;
   }
 }
 
@@ -82,6 +83,7 @@
   padding: 0;
   align-self: center;
   color: #000000;
+  font-style: normal;
   font-weight: 400;
   font-size: 13px;
   line-height: 16px;
