--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,24 +14,19 @@
 
 @media screen and (max-width: 768px) {
   .header {
-    max-width: 768px;
+    padding: 0px 30px 0px;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .header {
+    padding: 0px 20px 0px;
+  }
+}
+
 
 .header__logo-container {
   display: flex;
   align-items: center;
   margin: 18px 0px 18px 0px;
-}
-
-@media screen and (max-width: 768px) {
-  .header__logo-container {
-    margin-left: 30px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .header__logo-container {
-    margin-left: 14px;
-  }
 }
