--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -11,19 +11,24 @@
   justify-content: center;
 }
 
-@media screen and (max-width: 1024px) {
+
+@media screen and (max-width: 768px) {
   .movies-card-list__container {
-    margin: 0 30px 0 30px;
-    row-gap: 36px;
-    column-gap: 30px;
+    margin: 65px 30px 0 30px;
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 620px) {
   .movies-card-list__container {
     margin: 0 10px 0 10px;
     grid-template-columns: 100%;
     grid-template-rows: max-content;
     row-gap: 16px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .movies-card-list__container {
+    margin: 50px 15px 0;
   }
 }
