--- a/src/components/NavProfileBtn/NavProfileBtn.css
+++ b/src/components/NavProfileBtn/NavProfileBtn.css
@@ -30,3 +30,33 @@
   line-height: 18px;
   color: #000;
 }
+
+@media screen and (max-width: 768px) {
+  .nav-profile-btn {
+      display: none;
+  }
+}
+
+.nav-profile-btn__display_open {
+  display: block;
+  margin-top: 593px;
+}
+
+.nav-profile-menu {
+  padding: 0;
+  margin: 0;
+  min-height: 44px;
+  min-width: 44px;
+  background-color: #fff;
+  background-image: url('../../images/header-nav__menu-button.svg');
+  background-position: center;
+  border: none;
+  display: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-profile-menu {
+      display: inline-block;
+  }
+}
