--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 768px) {
   .promo {
-    margin: 20px 20px 0 20px;
+    margin: 20px 20px 20px;
     max-width: 768px;
     min-height: 834px;
   }
@@ -31,6 +31,7 @@
 }
 
 .promo__title {
+  margin: 0px;
   padding-top: 160px;
   font-style: normal;
   font-weight: 400;
@@ -43,7 +44,17 @@
 @media screen and (max-width: 768px) {
   .promo__title {
     padding-top: 350px;
-    font-size: 40px;
+    font-size: 37px;
     line-height: 52px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .promo__title {
+    padding-top: 215px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 37px;
   }
 }
