--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -10,7 +10,7 @@
   flex-direction: row;
   align-items: center;
   margin: 0 0 69px;
-  background: #F9F9F9;
+  background: #f9f9f9;
   border-radius: 9px;
 }
 
@@ -22,7 +22,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
-  background: #F9F9F9;
+  background: #f9f9f9;
 }
 
 .search__input:focus {
@@ -39,7 +39,7 @@
   margin: 0px;
   padding: 0px;
   border: none;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
   color: #fff;
   font-size: 11px;
   font-weight: 500;
@@ -58,12 +58,17 @@
   align-items: center;
 }
 
+.search__toggle_mini-size {
+  display: none;
+}
+
 .search__films {
   margin: 0 0 0 12px;
-  padding-right: 14px;
+  padding-left: 14px;
   font-size: 13px;
   font-weight: 400;
   line-height: 18px;
+  padding-right: 20px;
 }
 
 .search__tumbler {
@@ -82,7 +87,7 @@
 .search__slider {
   position: absolute;
   inset: 0;
-  background-color: #2BE080;
+  background-color: #2be080;
   border-radius: 16px;
   transition: 0.6s;
   transform: scale(-1, -1);
@@ -108,53 +113,11 @@
   transform: translateX(16px);
 }
 
-@media screen and (max-width: 800px) {
-  .search {
-    flex-direction: column;
-    margin: 0 30px 0;
-    padding: 55px 0 17px;
-  }
-
-  .search__container {
-    width: 98%;
-    padding: 6px;
-    margin: 0 0 37px;
-  }
-
-  .search__input {
-    padding: 0 11px;
-  }
-
-  .search__toggle {
-    margin: 0 0 39px;
-  }
-
-  .search__films {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 540px) {
-  .search {
-    margin: 0 15px 0;
-  }
-
-  .search__container {
-    margin: 0 0 44px;
-  }
-
-  .search__input {
-    padding: 0 8px;
-    font-size: 11px;
-  }
-
-  .search__toggle {
-    margin: 0 0 26px;
-  }
-
-  .search__films {
-    font-size: 11px;
-  }
+.search__border {
+  width: 1px;
+  height: 40px;
+  margin: 0 30px 0;
+  background: #e8e8e8;
 }
 
 .search__search-image {
@@ -163,9 +126,72 @@
   height: 34px;
 }
 
-.search__border {
-  width: 1px;
-  height: 40px;
-  margin: 0 30px 0;
-  background: #E8E8E8;
+@media screen and (max-width: 768px) {
+  .search {
+    flex-direction: column;
+    margin: 0 30px 0;
+    padding: 80px 0 120px;
+  }
+
+  .search__container {
+    width: 100%;
+    margin: 0;
+  }
+
+  .search__input {
+    padding: 0 11px;
+  }
+
+  .search__films {
+    padding-left: 0px;
+  }
+
+  .search__border {
+    margin: 0 25px 0;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .search {
+    margin: 0 15px 0;
+    padding-bottom: 40px;
+  }
+
+  .search__container {
+    width: 100%;
+    margin: 0 0 44px;
+  }
+
+  .search__input {
+    padding: 0 8px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .search__search-image-none {
+    display: none;
+  }
+
+  .search__button {
+    margin-right: 20px;
+  }
+
+  .search__toggle {
+    display: none;
+  }
+
+  .search__toggle_mini-size {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 0 0 0;
+  }
+
+  .search__border {
+    display: none;
+  }
+
+  .search__films {
+    font-size: 11px;
+  }
 }
