--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -31,8 +31,8 @@
 
 @media screen and (max-width: 1024px) {
   .technology__title {
-    margin: 0 50px 0 50px;
-    padding-top: 90px;
+    margin: 0px 50px 0 50px;
+    padding-top: 93px;
   }
 }
 
@@ -127,8 +127,8 @@
 }
 
 .technology__link {
-  margin-right: 10px;
-  margin-bottom: 100px;
+  margin-right: 5px;
+  margin-bottom: 90px;
 }
 
 .technology__link:last-of-type {
