--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,5 +1,5 @@
 .about-me {
-
+  margin: 0 auto;
   max-width: 1280px;
   min-height: 1079px;
 }
@@ -223,108 +223,5 @@
   .about-me__foto {
     margin-left: 0;
     margin-bottom: 40px;
-  }
-}
-
-.about-me__portfolio-link {
-  margin: 100px auto 0 70px;
-  color: #a0a0a0;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 20px;
-}
-
-@media screen and (max-width: 1024px) {
-  .about-me__portfolio-link {
-    margin: 91px auto 0 50px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .about-me__portfolio-link {
-    margin: 70px auto 0 14px;
-  }
-}
-
-.about-me__navigation {
-  margin: 30px 70px 125px 70px;
-  padding: 0;
-  list-style: none;
-}
-
-@media screen and (max-width: 1024px) {
-  .about-me__navigation {
-    margin: 30px 50px 90px 50px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .about-me__navigation {
-    margin: 20px 14px 70px 14px;
-  }
-}
-
-.about-me__link-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: #e8e8e8 1px solid;
-  text-decoration: none;
-  color: #000;
-  cursor: pointer;
-}
-
-.about-me__link-container:hover {
-  transition: 1s ease-in;
-  opacity: 0.4;
-}
-
-.about-me__link-name {
-  margin: 20px auto 20px 0;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 50px;
-}
-
-@media screen and (max-width: 768px) {
-  .about-me__link-name {
-    font-size: 28px;
-    line-height: 50px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .about-me__link-name {
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: -0.04em;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .about-me__link-name {
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: -0.04em;
-  }
-}
-
-.about-me__link-arrow {
-  max-width: 29px;
-  min-height: 60px;
-  object-fit: fill;
-  cursor: pointer;
-}
-
-@media screen and (max-width: 768px) {
-  .about-me__link-arrow {
-    max-width: 27px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .about-me__link-arrow {
-    max-width: 12px;
-    margin-right: 15px;
   }
 }
