--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,6 +1,6 @@
 .movies-card__card {
   max-width: 100%;
-  min-height: 271px;
+  max-height: 271px;
   display: flex;
   flex-direction: column;
   justify-content: center;
