--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -30,6 +30,7 @@
   font-weight: 400;
   font-size: 22px;
   line-height: 27px;
+  letter-spacing: -0.04em;
   border-bottom: #000 1px solid;
 }
 
@@ -88,9 +89,11 @@
 
 .about-me__name {
   margin: 0;
+  font-style: normal;
   font-weight: 400;
   font-size: 50px;
   line-height: 58px;
+  letter-spacing: -0.04em;
 }
 
 @media screen and (max-width: 1024px) {
@@ -166,7 +169,7 @@
 }
 
 .about-me__github-link-container {
-  margin-top: 56px;
+  margin-top: 33px;
   margin-bottom: 0;
   font-weight: 500;
   font-size: 14px;
@@ -201,7 +204,7 @@
 
 .about-me__foto {
   max-width: 270px;
-  min-height: 327px;
+  max-height: 327px;
   object-fit: cover;
   border-radius: 10px;
 }
