--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -19,12 +19,13 @@
 
 .technology__title {
   margin: 0 70px 0 70px;
-  padding-top: 100px;
+  padding-top: 99px;
   min-height: 50px;
   max-width: 1140px;
   font-weight: 400;
   font-size: 22px;
   line-height: 27px;
+  letter-spacing: -0.04em;
   color: #000;
   border-bottom: #000 1px solid;
 }
@@ -57,6 +58,7 @@
   font-weight: 400;
   font-size: 50px;
   line-height: 58px;
+  letter-spacing: -0.04em;
   text-align: center;
   color: #000;
 }
@@ -82,6 +84,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+  letter-spacing: -0.04em;
   text-align: center;
   color: #000;
 }
@@ -127,7 +130,7 @@
 }
 
 .technology__link {
-  margin-right: 5px;
+  margin-right: 10px;
   margin-bottom: 90px;
 }
 
@@ -154,6 +157,7 @@
   font-size: 14px;
   line-height: 17px;
   text-align: center;
+  letter-spacing: -0.04em;
   background-color: #e8e8e8;
   color: #000;
   cursor: pointer;
