--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -21,11 +21,14 @@
 }
 
 .profile__title {
-    margin-top: 74px;
+    margin-top: 71px;
     margin-bottom: 106px;
+    padding-left: 5px;
+    font-style: normal;
     font-weight: 500;
     font-size: 24px;
     line-height: 29px;
+    text-align: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -47,6 +50,7 @@
     justify-content: space-between;
     border-bottom: #424242 1px solid;
     min-width: 410px;
+    min-height: 47px;;
 }
 
 .profile__container:last-of-type {
