--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,6 +1,6 @@
 .search {
   margin: 0 70px 0;
-  padding: 81px 0 10px;
+  padding: 67px 0 0px;
   border-bottom: 1px solid #e8e8e8;
 }
 
@@ -16,12 +16,13 @@
 
 .search__input {
   width: 100%;
-  padding: 0 35px 0 10px;
+  padding: 0 0 0 10px;
   outline: none;
   border: none;
-  font-size: 14px;
+  font-style: normal;
   font-weight: 400;
-  line-height: 18px;
+  font-size: 18px;
+  line-height: 20px;
   background: #f9f9f9;
 }
 
@@ -37,7 +38,7 @@
 
 .search__button {
   margin: 0px;
-  padding: 0px;
+  padding: 5px 3px 3px 2px;
   border: none;
   background-color: #f9f9f9;
   color: #fff;
@@ -63,12 +64,11 @@
 }
 
 .search__films {
-  margin: 0 0 0 12px;
-  padding-left: 14px;
+  margin: 0 0 0 15px;
   font-size: 13px;
   font-weight: 400;
   line-height: 18px;
-  padding-right: 20px;
+  padding-right: 30px;
 }
 
 .search__tumbler {
@@ -116,7 +116,7 @@
 .search__border {
   width: 1px;
   height: 40px;
-  margin: 0 30px 0;
+  margin: 0 27px 0;
   background: #e8e8e8;
 }
 
