--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -44,6 +44,7 @@
 @media screen and (max-width: 768px) {
   .about-project__title {
     max-width: 668px;
+    padding-top: 70px;
   }
 }
 
@@ -120,6 +121,13 @@
   letter-spacing: -0.04em;
   color: #000;
 }
+
+@media screen and (max-width: 768px) {
+  .about-project__card-title {
+    margin-bottom: 21px;
+  }
+}
+
 
 @media screen and (max-width: 600px) {
   .about-project__card-title {
