--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -14,7 +14,8 @@
 
 @media screen and (max-width: 768px) {
   .movies-card-list__container {
-    margin: 65px 30px 0 30px;
+   gap: 36px 30px;
+    margin: 80px 30px 0;
   }
 }
 
