--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -50,7 +50,7 @@
 @media screen and (max-width: 400px) {
   .about-me__title {
     margin: 0 14px 0 14px;
-    padding-top: 70px;
+    padding-top: 68px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -237,6 +237,15 @@
 
 @media screen and (max-width: 600px) {
   .about-me__foto {
+    margin-left: 0;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about-me__foto {
+    max-width: 292px;
+    min-height: 352px;
     margin-left: 0;
     margin-bottom: 40px;
   }
