--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -50,8 +50,8 @@
 
 @media screen and (max-width: 600px) {
   .about-project__title {
-    margin: 0 14px 0 14px;
-    padding-top: 70px;
+    margin: 0 18px 0 18px;
+    padding-top: 69px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -180,6 +180,7 @@
     margin: 0 18px 70px 18px;
     grid-template-columns: 100px auto;
     grid-template-rows: 35px min-content;
+    gap: 10px 0px;
   }
 }
 
