--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,7 +20,8 @@
 
 @media screen and (max-width: 400px) {
   .header {
-    padding: 0px 20px 0px;
+    margin-top: -1px;
+    padding: 0px 15px 0px;
   }
 }
 
