--- a/src/components/NavProfileBtn/NavProfileBtn.css
+++ b/src/components/NavProfileBtn/NavProfileBtn.css
@@ -52,8 +52,8 @@
 .nav-profile-menu {
   padding: 0;
   margin: 0;
-  min-height: 44px;
-  min-width: 44px;
+  height: 44px;
+  width: 44px;
   background-color: #fff;
   background-image: url('../../images/header-nav__menu-button.svg');
   background-position: center;
@@ -65,5 +65,13 @@
 @media screen and (max-width: 768px) {
   .nav-profile-menu {
       display: inline-block;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .nav-profile-menu {
+    width: 35px;
+    height: 35px;
+    background-size: cover;
   }
 }
