--- a/src/components/ScrollMoviesBtn/ScrollMoviesBtn.css
+++ b/src/components/ScrollMoviesBtn/ScrollMoviesBtn.css
@@ -30,6 +30,8 @@
 
 @media screen and (max-width: 480px) {
   .scroll-movies-btn__button {
+    margin-top: 80px;
+    margin-bottom: 50px;
     min-width: 240px;
   }
 }
