--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -14,6 +14,7 @@
 @media screen and (max-width: 320px) {
   .technology {
     min-height: 651px;
+    background-color: #fff;
   }
 }
 
@@ -46,8 +47,8 @@
 
 @media screen and (max-width: 600px) {
   .technology__title {
-    margin: 0 14px 0 14px;
-    padding-top: 70px;
+    margin: 0 18px 0 18px;
+    padding-top: 68px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -107,6 +108,12 @@
     margin-bottom: 50px;
     font-size: 11px;
     line-height: 16px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .technology__description {
+   max-width: 280px;
   }
 }
 
