--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,7 @@
 .page {
   max-width: 1280px;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   font-family: "Inter", Arial, sans-serif;
   color: #000;
