--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,14 @@
 .footer {
-  margin: 79px auto 0 auto;
+  margin: 80px 0 0;
   padding: 0;
-  max-width: 1380px;
+  max-width: 1300px;
   min-height: 56px;
+}
+
+@media screen and (max-width: 400px) {
+  .footer {
+    margin-top: 120px;
+  }
 }
 
 .footer__title {
@@ -19,7 +25,8 @@
 
 @media screen and (max-width: 768px) {
   .footer__title {
-    margin: 0px 24px 0px 36px;
+    margin: 0;
+    padding-bottom: 20px;
   }
 }
 
@@ -35,7 +42,8 @@
 }
 
 .footer__container {
-  margin: 0 5.47vw 0 5.47vw;
+  margin: 0 auto 0 ;
+  max-width: 1140px;
   padding: 0;
   max-height: 56px;
   align-self: center;
@@ -46,7 +54,7 @@
 
 @media screen and (max-width: 768px) {
   .footer__container {
-    margin: 0px 25px 0px 35px;
+    margin: 0px 30px 0px 30px;
   }
 }
 
@@ -85,6 +93,19 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  list-style-type:none;
+}
+
+.footer__link-item {
+  text-decoration: none;
+  color: #000000;
+  padding: 0;
+}
+
+
+.footer__links-nav{
+  margin: auto 0;
 }
 
 @media screen and (max-width: 480px) {
