--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-  margin: 0px auto 0px;
+  margin: -8px 0px 0px;
   padding: 0px 70px 0px;
   display: flex;
   flex-direction: row;
@@ -14,13 +14,14 @@
 
 @media screen and (max-width: 768px) {
   .header {
+    margin: 1px 0px 0px; 
     padding: 0px 30px 0px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .header {
-    margin-top: -1px;
+    margin-top: 1px;
     padding: 0px 15px 0px;
   }
 }
@@ -29,5 +30,5 @@
 .header__logo-container {
   display: flex;
   align-items: center;
-  margin: 18px 0px 18px 0px;
+  margin: 20px 0px 14px 0px;
 }
