--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -59,6 +59,11 @@
   background-image: url("../../images/movies-card__add-favorites-btn_active.svg");
 }
 
+.movies-card__add-favorites-btn:hover {
+  background-image: url("../../images/movies-card__add-favorites-btn_active.svg");
+  transition: 1.5s;
+}
+
 .movies-card__delete-favorites-btn {
   margin: 0;
   min-width: 30px;
@@ -69,6 +74,11 @@
   padding: 0;
   border: none;
   background-color: #fff;
+}
+
+.movies-card__delete-favorites-btn:hover {
+  background-image: url("../../images/movies-card__add-favorites-btn.svg");
+  transition: 1.5s;
 }
 
 .movies-card__image {
