--- a/src/components/ScrollMoviesBtn/ScrollMoviesBtn.css
+++ b/src/components/ScrollMoviesBtn/ScrollMoviesBtn.css
@@ -1,14 +1,14 @@
 .scroll-movies-btn {
   margin: 0 auto 0 auto;
   max-width: 1280px;
-  min-height: 166px;
+  min-height: 50px;
   display: flex;
   justify-content: center;
 }
 
 .scroll-movies-btn__button {
   margin-top: 50px;
-  margin-bottom: 80px;
+  margin-bottom: 0px;
   padding: 0;
   min-width: 320px;
   min-height: 36px;
@@ -28,10 +28,17 @@
   opacity: 0.6;
 }
 
+@media screen and (max-width: 768px) {
+  .scroll-movies-btn__button {
+    margin-top: 80px;
+    margin-bottom: 78px;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .scroll-movies-btn__button {
     margin-top: 80px;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     min-width: 240px;
   }
 }
