feat: адаптировать под 320px

--- a/src/components/Authorization/Authorization.css
+++ b/src/components/Authorization/Authorization.css
@@ -1,5 +1,5 @@
 .authorization {
-    margin: 0 auto 0 auto;
+    margin: -1px auto 0 auto;
     max-width: 1280px;
     min-height: 266px;
     color: #000;
@@ -163,7 +163,7 @@
 }
 
 .authorization__confirm-button {
-    margin: 69px 0 0 0;
+    margin: 132px 0 0 0;
     padding-left: 125px;
     padding-right: 125px;
     min-width: 396px;
