--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 768px) {
   .about-me {
-    margin: 0 auto 78px;
+    margin: 0 auto;
   }
 }
 
@@ -50,7 +50,7 @@
 @media screen and (max-width: 400px) {
   .about-me__title {
     margin: 0 14px 0 14px;
-    padding-top: 68px;
+    padding-top: 70px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -122,7 +122,7 @@
 
 .about-me__about {
   margin-top: 18px;
-  margin-bottom: 0;
+  margin-bottom: 26px;
   font-weight: 500;
   font-size: 18px;
   line-height: 20px;
@@ -131,6 +131,7 @@
 @media screen and (max-width: 1024px) {
   .about-me__about {
     margin-top: 16px;
+    margin-bottom: 20px;
     font-size: 12px;
     line-height: 18px;
   }
@@ -145,7 +146,8 @@
 }
 
 .about-me__biography {
-  margin-top: 26px;
+  margin: 0px;
+  max-width: 590px;
   margin-bottom: 0;
   font-weight: 400;
   font-size: 14px;
@@ -155,7 +157,6 @@
 
 @media screen and (max-width: 1024px) {
   .about-me__biography {
-    margin-top: 20px;
     font-size: 12px;
     line-height: 18px;
   }
@@ -169,7 +170,7 @@
 }
 
 .about-me__github-link-container {
-  margin-top: 33px;
+  margin-top: 98px;
   margin-bottom: 0;
   font-weight: 500;
   font-size: 14px;
@@ -181,12 +182,6 @@
     margin-top: 87px;
     font-size: 14px;
     line-height: 17px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .about-me__github-link-container {
-    margin-top: 34px;
   }
 }
 
