--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,7 +2,7 @@
   max-width: 1280px;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 0px auto;
   font-family: "Inter", Arial, sans-serif;
   color: #000;
   -webkit-text-size-adjust: 100%;
