--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,13 +1,27 @@
 .footer {
-  margin: 80px 0 0;
+  margin: 0;
   padding: 0;
   max-width: 1300px;
   min-height: 56px;
 }
 
+@media screen and (max-width: 768px) {
+  .footer {
+    margin: 80px auto 0;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
+    text-align: center;
+    min-width: 708px;
+  }
+}
+
+
 @media screen and (max-width: 400px) {
   .footer {
-    margin-top: 120px;
+    min-width: 300px;
+    margin: -2px auto 0;
+    padding-left: 0px;
   }
 }
 
@@ -32,7 +46,7 @@
 
 @media screen and (max-width: 400px) {
   .footer__title {
-    margin: 0px 10px 0px;
+    margin: 0px 0px 0px;
     padding-top: 40px;
     font-weight: 400;
     font-size: 12px;
@@ -45,7 +59,7 @@
   margin: 0 auto 0 ;
   max-width: 1140px;
   padding: 0;
-  max-height: 56px;
+  min-height: 56px;
   align-self: center;
   display: flex;
   flex-direction: row;
@@ -54,14 +68,14 @@
 
 @media screen and (max-width: 768px) {
   .footer__container {
-    margin: 0px 30px 0px 30px;
+    margin: 0px;
   }
 }
 
 @media screen and (max-width: 480px) {
   .footer__container {
-    margin: 30px 5.47vw 0 5.47vw;
-    max-height: 127px;
+    margin: 16px auto 0;
+    min-height: 127px;
     flex-direction: column-reverse;
   }
 }
@@ -78,7 +92,7 @@
 
 @media screen and (max-width: 480px) {
   .footer__copyring {
-    margin: 0 auto 10px;
+    margin: 0 0 25px;
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
@@ -106,6 +120,12 @@
 
 .footer__links-nav{
   margin: auto 0;
+}
+
+@media screen and (max-width: 480px) {
+  .footer__links-nav {
+    margin: 15px 0 0 0;
+  }
 }
 
 @media screen and (max-width: 480px) {
