--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,6 +1,5 @@
 .movies-card__card {
   max-width: 100%;
-  max-height: 271px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,7 +9,7 @@
 @media screen and (max-width: 768px) {
   .movies-card__card {
     max-width: 339px;
-    max-height: 258px;
+    min-height: 258px;
   }
 }
 
@@ -20,8 +19,21 @@
   }
 }
 
+@media screen and (max-width: 320px) {
+  .movies-card__card {
+    min-width: 300px;
+  }
+}
+
+.movies-card__link {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+
+}
+
 .movies-card__info {
-  min-height: 68px;
+  min-height: 67.5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -33,10 +45,11 @@
   font-weight: 500;
   font-size: 15px;
   line-height: 18px;
+  color: black;
 }
 
 .movies-card__time {
-  margin: 9px 0 0 0;
+  margin: 10px 0 0 0;
   font-weight: 400;
   font-size: 11px;
   line-height: 13px;
@@ -85,7 +98,6 @@
   margin: 0 auto 0 auto;
   width: 100%;
   min-width: 100%;
-  max-height: 203px;
   object-fit: cover;
   background-color: #F9F9F9;
 }
