--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -57,12 +57,19 @@
     background: transparent;
     border: none;
     border-bottom: 1px solid #e8e8e8;
-    width: 80%;
+    width: 80%;    
     height: 50px;
-    font-size: 11px;
+    font-style: normal;
     font-weight: 400;
+    font-size: 11px;
+    line-height: 13px;
     padding: 0;
     text-align: right;
+    outline: none;
+  }
+
+  .profile__input::placeholder {
+    color: #000;
   }
   
   .profile__input_bottom {
@@ -95,4 +102,16 @@
   .profile__btn_type_logout {
     color: #ee3465;
     font-weight: 500;
+  }
+
+  .profile__input:focus {
+    width: 90%;
+    outline: 1px solid #3456F3;
+    border-radius: 50px;
+  }
+
+  .profile__input:hover {
+    width: 90%;
+    outline: 1px solid #3456F3;
+    border-radius: 50px;
   }
