--- a/src/components/ScrollMoviesBtn/ScrollMoviesBtn.css
+++ b/src/components/ScrollMoviesBtn/ScrollMoviesBtn.css
@@ -1,5 +1,5 @@
 .scroll-movies-btn {
-  margin: 0 auto 0 auto;
+  margin: 0 auto 80px auto;
   max-width: 1280px;
   min-height: 50px;
   display: flex;
@@ -31,14 +31,13 @@
 @media screen and (max-width: 768px) {
   .scroll-movies-btn__button {
     margin-top: 80px;
-    margin-bottom: 78px;
+    margin-bottom: 0px;
   }
 }
 
 @media screen and (max-width: 480px) {
   .scroll-movies-btn__button {
-    margin-top: 80px;
-    margin-bottom: 0px;
+    margin-bottom: 40px;
     min-width: 240px;
   }
 }
