--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,6 +1,6 @@
 .search {
   margin: 0 70px 0;
-  padding: 67px 0 0px;
+  padding: 70px 0 0px;
   border-bottom: 1px solid #e8e8e8;
 }
 
@@ -24,12 +24,12 @@
   font-size: 18px;
   line-height: 20px;
   background: #f9f9f9;
+  border-bottom: #f9f9f9 1px solid; 
 }
 
 .search__input:focus {
   width: 90%;
-  outline: 1px solid #f9f9f9;
-  border-radius: 50px;
+  border-bottom: #4285F4 1px solid; 
 }
 
 .search__input::placeholder {
@@ -134,7 +134,7 @@
 @media screen and (max-width: 768px) {
   .search {
     flex-direction: column;
-    margin: -2px 30px 0;
+    margin: 0px 30px 0;
     padding: 80px 0 108px;
   }
 
@@ -167,7 +167,7 @@
 @media screen and (max-width: 540px) {
   .search {
     margin: 0 10px 0;
-    padding: 80px 0 42px;
+    padding: 80px 0 45px;
   }
 
   .search__container {
@@ -176,7 +176,7 @@
   }
 
   .search__input {
-    padding: 0px 19px 7px;
+    padding: 0px 19px 0px;
     font-size: 14px;
     line-height: 20px;
   }
