--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -48,7 +48,7 @@
 @media screen and (max-width: 600px) {
   .technology__title {
     margin: 0 18px 0 18px;
-    padding-top: 68px;
+    padding-top: 70px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -82,7 +82,8 @@
 }
 
 .technology__description {
-  margin-bottom: 100px;
+  margin: 0px auto 100px;
+  max-width: 460px;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
@@ -184,8 +185,15 @@
 @media screen and (max-width: 768px) {
   .technology__button {
     min-width: 84px;
-    min-height: 57px;
+    min-height: 60px;
     font-size: 12px;
     line-height: 15px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .technology__button {
+    min-width: 84px;
+    min-height: 57px;
   }
 }
