feat: адаптировать под 320px

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -90,7 +90,7 @@
 }
 
 .movies-card__delete-favorites-btn:hover {
-  background-image: url("../../images/movies-card__add-favorites-btn.svg");
+  opacity: 0.5;
   transition: 1.5s;
 }
 
