refactor: исправить поиск

--- a/src/components/Authorization/Authorization.css
+++ b/src/components/Authorization/Authorization.css
@@ -277,5 +277,5 @@
 .authorization__confirm-button_disable {
     background: #F8F8F8;
     color: #C2C2C2;
-    cursor: none;
+    cursor: auto;
 }
